# cpp_boilerplate

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  constants.h  main.cpp  simple_class.cpp  simple_class.h
src/inheritance/: abstract_class_a.h  abstract_class_b.h  concrete_child_class.cpp  concrete_child_class.h  concrete_class.cpp  concrete_class.h
src/operator_overload/: operator_overloaded_class.h
src/template/: template_class.h
tst/: CMakeLists.txt  operator_overloaded_class_test.cpp  simple_class_test.cpp  template_class_test.cpp
